# FlyIC.Kernel.Base

./: CMakeLists.txt  LICENSE  README.md  build.sh  init.sh
include/: ExChar.hpp  Types.hpp
src/: lib.cpp  placeholders.cpp
tmp/: CMakeCache.txt  Makefile  cmake_install.cmake
